# watchdog

./: .coveragerc  .env.example  .env.production  .gitignore  .production.env  Dockerfile  README.md  app.py  auth.py  config.py  deploy.sh  docker-compose.yml  example_oidc_config.py  forms.py  models.py  monitoring.py  notifications.py  pyproject.toml  pytest.ini  requirements.txt  routes.py  run.py  run_tests.py  service_checker.py  test_app.py  wsgi.py
templates/: add_service.html  base.html  dashboard.html  edit_service.html  index.html  service_detail.html  services.html
watchdog/: app.py  db.py  functor.py  oidc.py  oidc_client.py  watchdog.py  web_app.py  web_app_config.py
watchdog/data/: and_.py  bool_condition.py  boot_oidc_config.py  create_watchdog.py  delete.py  delete_watchdogs.py  descriptor.py  equals.py  in.py  insert.py  oidc_config.py  or_.py  query.py  select.py  select_watchdog.py  update.py  update_watchdog.py  uvicorn_config.py  watchdog.py  watchdog_descriptor.py  web_app_config.py  write_query.py
watchdog/html_templates/: base.html  login.html  message.html  watchdogs.html
watchdog/public_html/: style.css
